Set up collections, tweaked design, added more mobile responsiveness.

--- a/pages/events/index.html
+++ b/pages/events/index.html
@@ -1,11 +1,9 @@
 ---
-layout: page
+layout: events
 title: Events
 subtitle: ''
 permalink: /events/
 ---
-
-<!-- Google calendar embed -->
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem aperiam rem facere quo. Eos distinctio a ex voluptate quo dolore maiores, doloremque accusantium vero asperiores veniam nihil quam quod repellendus.
 
