Added customization to front page, fixed a few styling bugs, added lineage page, moved links under about us, styled submenu, added social to page format.

--- a/index.html
+++ b/index.html
@@ -2,4 +2,17 @@
 layout: front
 title: Kaizen IBBA
 subtitle:
+boxes:
+  - title: Programs
+    image_path:
+    subtitle: Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    permalink: /programs/
+  - title: Our Values
+    image_path:
+    subtitle: Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    permalink: /values/
+  - title: Events
+    image_path:
+    subtitle: Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    permalink: /events/
 ---
