Updated 'pages/faq/index.html' via CloudCannon

--- a/pages/faq/index.html
+++ b/pages/faq/index.html
@@ -5,6 +5,9 @@ permalink: /faq/
 ---
 
 <section class="staff page-content-area">
+  <div class="editable">Lorem ipsum</div>
+</section>
+<section class="staff page-content-area">
   {% assign faq = site.faqs | sort: 'order' %}
   {% for item in faq %}
     <figure class="faq-question page-content-item">
