Updated 'pages/faq/index.html' via CloudCannon

--- a/pages/faq/index.html
+++ b/pages/faq/index.html
@@ -5,7 +5,7 @@ permalink: /faq/
 ---
 
 <section class="staff page-content-area">
-  <div class="editable">Lorem ipsum</div>
+  <div class="editable"><p>Thank you for your interest in Kaizen IBBA. We offer one of the finest martial arts programs available in Northern Colorado. From our Lil&rsquo; Dragons and Tiny Tigers classes to our Youth and Adult classes, we have a program to meet most people&rsquo;s needs and budgets. We offer daytime, afternoon, and evening classes Monday through Saturday. Our classes are divided by age as well as ability level and we pride ourselves on being &ldquo;The Family School&rdquo; where every student feels welcome and appreciated.</p></div>
 </section>
 <section class="staff page-content-area">
   {% assign faq = site.faqs | sort: 'order' %}
