Added a few style touchups, gallery styling, member page accordions, and events articles

--- a/pages/gallery/index.html
+++ b/pages/gallery/index.html
@@ -4,15 +4,15 @@ title: Gallery
 permalink: /gallery/
 ---
 
-<section class="clearfix">
-  <ul class="grid">
-    {% for item in site.gallery %}
-		<a class="gallery-group" href="{{ item.permalink }}">
-			<li itemscope class="grid-item">
-				<h5 class="gallery-group-name">{{ item.title }}</h5>
-				<img class="gallery-item lrg" src="{{ item.images.first.small_image_path }}" alt="{{ item.title }}" itemprop="image">
-			</li>
-		</a>
-    {% endfor %}
-  </ul>
+<section class="gallery-list page-content-area">
+  {% for item in site.gallery %}
+  	<a class="gallery-item-link-wrap" href="{{ item.permalink }}">
+  		<figure class="gallery-item">
+        <img class="gallery-spotlight-image" src="{{ item.spotlight_image_path }}" alt="{{ item.title }}">
+        <figcaption>
+          <p class="gallery-name">{{ item.title }}</p>
+        </figcaption>
+  		</figure>
+    </a>
+  {% endfor %}
 </section>
