Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@ subtitle:
 boxes:
   - title: Programs
     image_path:
-    subtitle: Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    subtitle: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'
     permalink: /programs/
   - title: Our Values
-    image_path:
-    subtitle: Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    image_path: /uploads/values.png
+    subtitle:
     permalink: /values/
   - title: Events
     image_path:
-    subtitle: Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    subtitle: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'
     permalink: /events/
 ---
