Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ title: Kaizen IBBA
 subtitle:
 boxes:
   - title: Programs
-    image_path:
-    subtitle: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'
+    image_path: /uploads/programs.png
+    subtitle:
     permalink: /programs/
   - title: Our Values
     image_path: /uploads/values.png
@@ -13,6 +13,6 @@ boxes:
     permalink: /values/
   - title: Events
     image_path:
-    subtitle: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit.'
+    subtitle:
     permalink: /events/
 ---
