Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ boxes:
     image_path: /uploads/values.png
     subtitle:
     permalink: /values/
-  - title: Events
+  - title: 'Events & Promos'
     image_path:
     subtitle:
     permalink: /events/
