Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ boxes:
     image_path: /uploads/programs.png
     subtitle:
     permalink: /programs/
-  - title: 'Events & Promos'
+  - title: Promos
     image_path:
     subtitle:
     permalink: /events/
@@ -15,4 +15,8 @@ boxes:
     image_path: /uploads/values.png
     subtitle:
     permalink: /values/
+  - title: Events
+    image_path:
+    subtitle:
+    permalink:
 ---
