Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ subtitle:
 boxes:
   - title: Programs
     image_path: /uploads/programs.png
-    subtitle:
+    subtitle: Click here to see what classes we offer
     permalink: /programs/
   - title: Promos
     image_path:
@@ -18,5 +18,5 @@ boxes:
   - title: Events
     image_path:
     subtitle:
-    permalink:
+    permalink: /events/
 ---
