Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ subtitle:
 boxes:
   - title: Programs
     image_path: /uploads/programs.png
-    subtitle: Click here to see what classes we offer
+    subtitle: Click Here To See What Classes We Offer
     permalink: /programs/
   - title: Promos
     image_path:
