--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ boxes:
     image_path:
     subtitle:
     permalink: /events/
-  - title: Our Values
+  - title: About Us
     image_path: /uploads/values.png
     subtitle:
     permalink: /values/
