Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ boxes:
     subtitle: Click Here To See What Classes We Offer
     permalink: /programs/
   - title: Promos
-    image_path:
+    image_path: /uploads/banner1-new.png
     subtitle:
-    permalink: /events/
+    permalink: /programs/kickbox/5
   - title: About Us
     image_path: /uploads/values.png
     subtitle:
