--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ boxes:
   - title: Promos
     image_path: /uploads/banner1-new.png
     subtitle:
-    permalink: /programs/kickbox/5
+    permalink: /programs/kickbox/
   - title: About Us
     image_path: /uploads/values.png
     subtitle:
