Added video in about us box

--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@ boxes:
     image_path: /uploads/programs.png
     subtitle: Click Here To See What Classes We Offer
     permalink: /programs/
+    video: false
   - title: Promos
     image_path: /uploads/banner1-new.png
     subtitle:
     permalink: /programs/kickbox/
+    video: false
   - title: About Us
     image_path: /uploads/values.png
     subtitle:
     permalink: /values/
+    video: true
 ---
