Added address with google maps embed on contact page. Changed front boxes to be more dynamic for youtube videos. Changed event pages to allow enlarging of image

--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@ subtitle:
 boxes:
   - title: Programs
     image_path: /uploads/programs.png
+    youtube_url:
     subtitle: Click Here To See What Classes We Offer
     permalink: /programs/
     video: false
   - title: Promos
     image_path: /uploads/banner1-new.png
+    youtube_url:
     subtitle:
     permalink: /programs/kickbox/
     video: false
   - title: About Us
-    image_path: /uploads/values.png
+    image_path: 
+    youtube_url: https://www.youtube.com/embed/S4cMiG41cFo
     subtitle:
     permalink: /values/
     video: true
